examples/type_system/failing/52_strict_public_missing_return_annotation.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

public fn add(x: Int, y: Int) {
    x + y
}

fn main() -> Unit {
}
